--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calcular el área de un octágono regular</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./js/script.js"></script>
+    <title>Calcular el área de un octógono regular</title>
 </head>
 <body>
-    
+    <h1>calculo del área de un octógono regular con valores dinámicos.</h1>
+    <div>
+        <form method="POST" action="pagina12.php" id="formulario">
+        <div class="row">
+            <div class="col s12">
+              <div class="row">
+                <div class="input-field col s2">
+                  <input type="text" id="longitud" class="autocomplete" name="longitud">
+                  <label for="autocomplete-input"><caption>Ingresar longitud:</caption></label>
+                </div> 
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12">
+              <div class="row">
+                <div class="input-field col s2">
+                  <input type="text" id="apotema" class="autocomplete">
+                  <label for="autocomplete-input"><caption>Ingresar apotema:</caption></label>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="btn waves-effect waves-light buttonStyle" type="submit" name="action" id="enviar">Calcular
+        </button>
+    </form>
+    <p id="resultados">Resultado</p>
+    </div>
 </body>
 </html>
